# kandiga

./: README.md  pyproject.toml
docs/: 04-15-2026.md  04-16-2026.md  04-17-2026.md  expertlog.md
kandiga/: __init__.py  _pack_experts.py  _split_experts.py  cli.py  engine.py  setup.py  speculative.py
kandiga/agents/: tools.py  vision.py
kandiga/metal/: expert_mlp.metal  full_forward_lg.m  kandiga_cpu_expert.m  kandiga_cpu_expert_lg.m
kandiga/voice/: __init__.py  agent.py  stt.py  tts.py
scripts/: bench_expert_cache.py  experiment_cross_token_cache.py  experiment_expert_analysis.py  experiment_expert_v2.py  setup_gemma4.py  test_gemma4_vision.py
