[project]
name = "kandiga"
version = "0.9.0"
description = "3 AI models. 161B parameters. One Mac. 5.5GB. Full agentic pipeline on Apple Silicon."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Kantheon"}]
dependencies = [
    "mlx>=0.30.0",
    "mlx-lm>=0.24.0",
    "numpy",
    "rich",
]

[project.urls]
Homepage = "https://kandiga.com"
Repository = "https://github.com/kantheon/kandiga"
Documentation = "https://github.com/kantheon/kandiga#readme"

[project.optional-dependencies]
serve = ["fastapi", "uvicorn[standard]"]
tools = ["duckduckgo-search"]
fast = ["zmlx>=0.10.0"]

[project.scripts]
kandiga = "kandiga.cli:main"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kandiga*"]

[tool.setuptools.package-data]
kandiga = ["metal/*.h", "metal/*.m", "metal/*.dylib", "metal/Makefile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
